# email-recognition

./: .gitignore  CMakeLists.txt  README.md
sources/: EmailRecognition.cpp  EmailRecognition.h  main.cpp  test.py
