cmake_minimum_required(VERSION 2.8)
project( EmailRecognition )
find_package( OpenCV REQUIRED )
include_directories( ${OpenCV_INCLUDE_DIRS} )
add_executable( EmailRecognition sources/EmailRecognition.cpp sources/main.cpp )
target_link_libraries( EmailRecognition ${OpenCV_LIBS} lept tesseract )
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
